oop-practice-library-management-system module add

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>oop-practice-students-grade-system</module>
         <module>java-oop-mastery-guide</module>
         <module>oop-practice-bank-account-system</module>
+        <module>oop-practice-library-management-system</module>
     </modules>
 
     <properties>
